# fusion

./: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
demo/: __init__.py  demo.py
fusion/: __init__.py  backup.py  cache.py  catalog.py  config.py  engine.py  exceptions.py  guardrails.py  result.py  strategy.py
fusion/connectors/: __init__.py  base.py  warp.py
fusion/middleware/: __init__.py  auth.py  logging.py
fusion/tools/: __init__.py  definitions.py  executor.py  mcp_server.py  rest_server.py
fusion/utils/: __init__.py  circuit_breaker.py  connection_pool.py  logger.py
fusion/views/: __init__.py  materialized.py
tests/: conftest.py  test_cache.py  test_catalog.py  test_circuit_breaker.py  test_config.py  test_connection_pool.py  test_e2e.py  test_engine.py  test_guardrails.py  test_pushdown.py  test_result.py  test_strategy.py  test_views.py
tests/test_connectors/: test_warp.py  test_warp_contract.py
tests/test_tools/: test_definitions.py  test_executor.py  test_mcp_server.py  test_rest_server.py
