[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fusion"
version = "0.5.0"
description = "DuckDB-powered in-memory OLAP engine — LLM tool for analytics"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "duckdb>=1.2",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.28",
    "sqlglot>=20.0",
    "tabulate>=0.9",
    "numpy>=1.24",
]

[project.optional-dependencies]
rest = ["fastapi>=0.110", "uvicorn>=0.27", "slowapi>=0.1.9"]
mcp = ["mcp[cli]>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.3", "mypy>=1.8", "responses>=0.25"]
all = ["fusion[mcp,rest,dev]"]

[project.scripts]
fusion-mcp = "fusion.tools.mcp_server:main"
fusion-rest = "fusion.tools.rest_server:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
