[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fusion"
version = "0.5.0"
description = "DuckDB-powered in-memory OLAP engine — LLM tool for analytics"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "duckdb>=1.2,<2",
    "pandas>=2.0,<3",
    "pyarrow>=23.0.1,<24",  # >=23.0.1 fixes PYSEC-2026-113
    "requests>=2.28,<3",
    "sqlglot>=20.0,<29",
    "tabulate>=0.9,<1",
    "numpy>=1.24,<3",
]

[project.optional-dependencies]
rest = ["fastapi>=0.110,<1.0", "uvicorn>=0.27,<1.0", "slowapi>=0.1.9,<0.2"]
mcp = ["mcp[cli]>=1.0,<2"]
dev = ["pytest>=8.0,<9", "pytest-cov>=5,<8", "ruff>=0.3,<1.0", "mypy>=1.8,<2", "responses>=0.25,<1", "pip-audit>=2.7"]
all = ["fusion[mcp,rest,dev]"]

[project.scripts]
fusion-mcp = "fusion.tools.mcp_server:main"
fusion-rest = "fusion.tools.rest_server:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
# 3.12 so mypy can parse PEP 695 syntax in recent numpy stubs. Runtime support
# is still 3.10+ (enforced by requires-python and ruff target-version).
python_version = "3.12"
# Third-party libs without type stubs (pandas, requests, tabulate, ...).
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
# Allow `x: int = None` to mean Optional[int] (still type-checks None misuse).
implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["fusion"]
omit = ["fusion/tools/mcp_server.py"]  # stdio server entrypoint, not unit-tested

[tool.coverage.report]
# Ratchet: keep coverage from regressing (currently ~78%). Raise toward 80%
# as CLI/main() paths gain tests.
fail_under = 75
show_missing = true
